--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -45,6 +45,7 @@ nav ul li a:hover
     width: 960px;
     margin: 0 auto;
     overflow: hidden;
+    display: flex;
 }
 
 .login-panel, .register-panel
@@ -52,11 +53,11 @@ nav ul li a:hover
     padding: 20px 20px 50px 20px;
     border: 1px solid #ccc;
     background-color: #fff;
-    float: initial
-}
-.login-panel
-{
-    float: left;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+    justify-content: center;
 }
 .register-panel
 {
@@ -126,6 +127,7 @@ form
 {
     overflow: hidden;
     margin-bottom: 10px;
+    text-align: center;
 }
 textarea
 {
@@ -145,7 +147,7 @@ textarea
     color: #888;
     margin-bottom: 5px;
 }
-p 
+p
 {
     padding: 10px;
 }
